correcting layout issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -141,3 +141,7 @@ p {
 #navlogo {
   padding-left: .5em;
 }
+
+.modal {
+  position: absolute;
+}
